--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.8.9",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "mysql": "^2.18.1",
     "socket.io": "^2.3.0"
   }
 }
